# mmo

./: .buckconfig  .gitignore  BUCK  Cargo.toml  TODO.md  limine.cfg  reindeer.toml  run.fish  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.zed/: settings.json
kernel/: BUCK  Cargo.toml  allocator.rs  apic.rs  cmdline.rs  gdt.rs  idt.rs  kernel.rs  linker.ld  log.rs  nt.rs  paging.rs  pci.rs  process.rs  reclaim.rs  serial.rs  smp.rs  switch.s  syscall.rs  user.rs  vfs.rs  virtio_blk.rs  zram.rs
kernel/src/: allocator.rs  cmdline.rs  kernel.rs  limine.rs  log.rs  process.rs  reclaim.rs  syscall.rs  user.rs  vfs.rs  virtio_blk.rs  zram.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64_impl/: mod.rs  serial.rs
kernel/src/arch/x86_64_impl/: apic.rs  gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs  smp.rs  switch.s
lib/crabfs/: BUCK  Cargo.toml  device.rs  error.rs  lib.rs  pack.rs  reader.rs  writer.rs
lib/limine-sys/: Cargo.toml  build.rs
lib/loader/: BUCK  Cargo.toml
toolchains/: BUCK  lld-link.sh
tools/: import_rootfs.sh  run.rs
tools/mkrootfs/: BUCK  Cargo.toml
tools/mkrootfs/src/: main.rs
userspace/native_init/: BUCK  child.c  init.c  init_reloc.c  ntdll.def  ntdll_reloc.c  ntdll_stubs.S  syscall_stubs.S
