[workspace]
members = ["lib/loader", "lib/crabfs", "kernel"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
loader = { path = "lib/loader" }
crabfs = { path = "lib/crabfs" }

x86_64 = "0.15.4"
limine = "0.5.0"
uefi = { version = "0.31.0", features = ["alloc", "logger"] }
thiserror = { version = "2.0.18", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls-no-provider",
    "stream",
    "http2",
] }
goblin = { version = "0.10.5", default-features = false, features = [
    "pe32",
    "pe64",
    "elf64",
    "elf32",
] }
linked_list_allocator = "0.10.5"
spin = "0.10.0"
plist = "1.8.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.50.0", default-features = false }
clap = { version = "4.6.0", features = [
    "derive",
    "std",
], default-features = false }
aes = "0.8.4"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
cipher = { version = "0.5.1", features = ["block-padding"] }
indicatif = "0.18.4"
byteorder = "1.5"
bitflags = { version = "2.11.0", default-features = false }
libc = { version = "0.2.183", default-features = false }
xattr = "1.6.1"
rustix = { version = "1.1.4", default-features = false, features = [
    "fs",
    "std",
] }
errno = { version = "0.3.14", default-features = false }
zip = "=8.4.0"
rayon = "1.11"
futures-util = "0.3"
unicode-normalization = { version = "0.1", default-features = false }
fatfs = "0.3"
fscommon = "0.1"
serde_bytes = "0.11"
getrandom = "0.4"
flate2 = "1.1"
crc32fast = "1.5"
hashbrown = "0.16"
memmap2 = "0.9"
binrw = { version = "0.15.1", default-features = false }
zlib-rs = { version = "0.6.3", default-features = false, features = [
    "__internal-api",
] }
lz4_flex = { git = "https://github.com/yujincheng08/lz4_flex", branch = "hc", default-features = false, features = [
    "checked-decode",
] }
pic8259 = "0.11.0"
rand_core = { version = "0.10.0", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }

[profile.dev]
panic = "abort"
split-debuginfo = "packed"

[profile.release]
panic = "abort"
lto = "thin"
strip = true
opt-level = 3

[workspace.lints.clippy]
