[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
goblin = { workspace = true }
thiserror = { workspace = true }
bitflags = "2.8.0"
loader = { workspace = true }
aarch64-cpu = { version = "11.2.0", optional = true }
crabfs = { workspace = true }
limine-sys = { workspace = true }
spin = { workspace = true }
linked_list_allocator = { workspace = true }
lz4_flex = { workspace = true }
uefi = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true, features = ["instructions", "abi_x86_interrupt"] }
pic8259 = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11.2.0"

[lints]
workspace = true
