[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
path = "kernel.rs"

[dependencies]
goblin = { workspace = true }
thiserror = { workspace = true }
loader = { workspace = true }
x86_64 = { workspace = true, features = ["instructions", "abi_x86_interrupt"] }
crabfs = { workspace = true }
limine = { workspace = true }
spin = { workspace = true }
pic8259 = { workspace = true }
linked_list_allocator = { workspace = true }
lz4_flex = { workspace = true }
uefi = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true
